refactoring service layers with added validations